--- a/src/App.scss
+++ b/src/App.scss
@@ -6,11 +6,6 @@ body {
   background-color: $primary-color;
 }
 
-main {
-    margin-left: 10vw;
-    margin-right: 10vw;
-}
-
 h2 {
   color: $secondary-color;
   text-align: center;
@@ -35,6 +30,18 @@ header, section {
     }
     button {
         width: 10em;
+        margin: auto;
+        margin-bottom: 2em;
+    }
+}
+
+/* header styling */
+header {
+    height: 100vh;
+    img {
+        width: 100%;
+        height: 70vh;
+        display: flex;
         margin: auto;
     }
 }
@@ -75,7 +82,30 @@ header, section {
 
 /* media queries */
 @media (max-width: 768px) {
+    /* display each element in its own row */
     .basic-grid {
         grid-template-columns: 1fr;
+    }
+    header {
+        .card {
+            margin-top: 10vh;
+        }
+        img {
+            display: grid;
+            place-items: center;
+            height: 50vh;
+        }
+    }
+}
+
+/* we need to find a better solution; this is super hacky; want to try to maintain the aspect ratio of image */
+@media (max-width: 500px){
+    header {
+        .card {
+            margin-top: 15vh;
+        }
+        img {
+            height: 35vh;
+        }
     }
 }
