--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ header, section {
 /* card styling */
 .card {
   display: flex;
+  margin: auto;
   flex-direction: column;
 }
 .card p {
@@ -40,14 +41,18 @@ header img {
   width: 100%;
   height: 70vh;
   display: flex;
-  margin: auto;
 }
 
 /* explore downtown styling */
+#explore_downtown img {
+  width: 100%;
+}
+
 /* popular destinations styling */
 .destination-container {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 1em;
 }
 
 .destination-item {
@@ -57,6 +62,8 @@ header img {
   background-repeat: no-repeat;
   background-position: center;
   border: 2px black solid;
+  display: flex;
+  margin: auto;
 }
 
 /* planner styling */
