--- a/src/App.scss
+++ b/src/App.scss
@@ -24,6 +24,7 @@ header, section {
 /* card styling */
 .card {
     display: flex;
+    margin: auto;
     flex-direction: column;
     p {
         text-align: center;
@@ -42,16 +43,21 @@ header {
         width: 100%;
         height: 70vh;
         display: flex;
-        margin: auto;
     }
 }
 
 /* explore downtown styling */
+#explore_downtown {
+    img {
+        width: 100%;
+    }
+}
 
 /* popular destinations styling */
 .destination-container {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 1em;
 }
 
 .destination-item{
@@ -61,6 +67,8 @@ header {
     background-repeat: no-repeat;
     background-position: center;
     border: 2px black solid;
+    display: flex;
+    margin: auto;
 }
 
 /* planner styling */
