--- a/src/App.scss
+++ b/src/App.scss
@@ -28,6 +28,8 @@ header, section {
     flex-direction: column;
     p {
         text-align: center;
+        max-width: 30em;
+        margin: auto;
     }
     button {
         width: 10em;
