Updated banner image. Chose more responsive image. Eliminates need for complex media queries.

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 /* basic colors, margins, etc. */
 body {
   background-color: #ffffff;
+  margin: 0;
 }
 
 h2 {
@@ -96,23 +97,6 @@ header img {
   /* display each element in its own row */
   .basic-grid {
     grid-template-columns: 1fr;
-  }
-  header .card {
-    margin-top: 10vh;
-  }
-  header img {
-    display: grid;
-    place-items: center;
-    height: 50vh;
-  }
-}
-/* we need to find a better solution; this is super hacky; want to try to maintain the aspect ratio of image */
-@media (max-width: 500px) {
-  header .card {
-    margin-top: 15vh;
-  }
-  header img {
-    height: 35vh;
   }
 }
 
