--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@ $secondary-color: #000000;
 /* basic colors, margins, etc. */
 body {
   background-color: $primary-color;
+  margin: 0;
 }
 
 h2 {
@@ -107,27 +108,5 @@ header {
     /* display each element in its own row */
     .basic-grid {
         grid-template-columns: 1fr;
-    }
-    header {
-        .card {
-            margin-top: 10vh;
-        }
-        img {
-            display: grid;
-            place-items: center;
-            height: 50vh;
-        }
-    }
-}
-
-/* we need to find a better solution; this is super hacky; want to try to maintain the aspect ratio of image */
-@media (max-width: 500px){
-    header {
-        .card {
-            margin-top: 15vh;
-        }
-        img {
-            height: 35vh;
-        }
     }
 }
