--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@ header img {
 /* popular destinations styling */
 .destination-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
+  grid-template-columns: 1fr;
   gap: 1em;
   margin-left: 15vw;
   margin-right: 15vw;
@@ -88,6 +88,10 @@ header img {
   /* display each element in its own row */
   .basic-grid {
     grid-template-columns: 1fr;
+  }
+  .destination-container {
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
