--- a/src/App.scss
+++ b/src/App.scss
@@ -67,7 +67,7 @@ header {
 /* popular destinations styling */
 .destination-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
+    grid-template-columns: 1fr;
     gap: 1em;
     margin-left: 15vw;
     margin-right: 15vw;
@@ -99,5 +99,9 @@ header {
     /* display each element in its own row */
     .basic-grid {
         grid-template-columns: 1fr;
+    }
+    .destination-container {
+        margin-left: 0;
+        margin-right: 0;
     }
 }
