--- a/src/components/css/Destination.scss
+++ b/src/components/css/Destination.scss
@@ -5,8 +5,7 @@ $beige: #F5F5DC;
 .destination-item {
     width: 80%;
     height: 20em;
-    background-color: $background-color;
-    border: 2px black solid;
+    border: $background-color solid 0.5em;
     display: flex;
     flex-direction: column;
     margin: auto;
@@ -29,8 +28,7 @@ $beige: #F5F5DC;
 }
 
 .purple {
-    background-color: $secondary-color;
-    color: $beige;
+    border: $secondary-color solid 0.5em;
 }
 
 /* media queries */
