--- a/src/components/InputForm/InputForm.scss
+++ b/src/components/InputForm/InputForm.scss
@@ -14,6 +14,7 @@
 form {
     display: flex;
     gap: 1em;
+
     button {
         max-width: 10em;
         margin: auto;
@@ -21,7 +22,7 @@ form {
 }
 
 /* media queries */
-@media (max-width: 768px) {
+@media (width <= 768px) {
     /* display each element in its own row */
     .basic-grid {
         label {
