--- a/src/components/InputForm/InputForm.scss
+++ b/src/components/InputForm/InputForm.scss
@@ -5,14 +5,19 @@
     }
 }
 
+.form-element {
+    max-width: 40em;
+}
+
 .amenities-container {
     display: flex;
     gap: 1em;
     flex-wrap: wrap;
 }
 
-form {
-    display: flex;
+.form-container {
+    display: grid;
+    margin: auto;
     gap: 1em;
 
     button {
