--- a/src/components/Station/Station.scss
+++ b/src/components/Station/Station.scss
@@ -1,3 +1,10 @@
-h2 {
-    text-decoration: underline;
+.station-container {
+    border: black 0.5em solid;
+    max-width: 50em;
+    margin: auto;
+    margin-top: 2em;
+
+    h2 {
+        text-decoration: underline;
+    }
 }
