--- a/src/components/PointOfInterestCard/PointOfInterestCard.scss
+++ b/src/components/PointOfInterestCard/PointOfInterestCard.scss
@@ -1,6 +1,24 @@
+$primary-color: #f1cd01;
+$secondary-color: #604675;
+
 .poi-container {
-    p {
+    display: flex;
+    flex-direction: column;
+    max-width: 20em;
+    margin: auto;
+    margin-bottom: 1.5em;
+    
+    p, h3 {
         font-size: 1.2rem;
         text-align: center;
+        line-height: 0.1rem;
     }
+}
+
+.poi-border-0 {
+    border-left: 0.4em $primary-color solid;
+}
+
+.poi-border-1 {
+    border-right: 0.4em $secondary-color solid;
 }
