--- a/src/components/PointOfInterestCard/PointOfInterestCard.scss
+++ b/src/components/PointOfInterestCard/PointOfInterestCard.scss
@@ -5,8 +5,7 @@ $secondary-color: #604675;
   display: flex;
   flex-direction: column;
   max-width: 20em;
-  margin: auto;
-  margin-bottom: 1.5em;
+  margin: auto auto 1.5em;
 
   p, h3 {
     font-size: 1.2rem;
