--- a/src/components/Station/Station.scss
+++ b/src/components/Station/Station.scss
@@ -1,8 +1,7 @@
 .station-container {
   border: black 0.5em solid;
   max-width: 50em;
-  margin: auto;
-  margin-top: 2em;
+  margin: 2em auto auto;
 
   h2 {
     text-decoration: underline;
