--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -12,7 +12,8 @@ h2 {
   text-align: center;
 }
 
-header, section {
+header,
+section {
   padding-bottom: 2em;
 }
 
@@ -54,18 +55,22 @@ header {
   --bg-pattern-size: 140px; /* control the size */
   $yellow: #f1cd01;
 
-  --bg-pattern-gradient: #0000 52%, #170409 /* first color */
-  54% 57%, #0000 59%;
+  --bg-pattern-gradient: #0000 52%, #170409 /* first color */ 54% 57%, #0000 59%;
 
-  background: radial-gradient(farthest-side at -33.33% 50%, var(--bg-pattern-gradient)) 0 calc(var(--bg-pattern-size) / 2),
-  radial-gradient(farthest-side at 50% 133.33%, var(--bg-pattern-gradient)) calc(var(--bg-pattern-size) / 2) 0,
-  radial-gradient(farthest-side at 133.33% 50%, var(--bg-pattern-gradient)),
-  radial-gradient(farthest-side at 50% -33.33%, var(--bg-pattern-gradient)),
-  $yellow; /* second color */
+  background: radial-gradient(
+        farthest-side at -33.33% 50%,
+        var(--bg-pattern-gradient)
+      )
+      0 calc(var(--bg-pattern-size) / 2),
+    radial-gradient(farthest-side at 50% 133.33%, var(--bg-pattern-gradient))
+      calc(var(--bg-pattern-size) / 2) 0,
+    radial-gradient(farthest-side at 133.33% 50%, var(--bg-pattern-gradient)),
+    radial-gradient(farthest-side at 50% -33.33%, var(--bg-pattern-gradient)),
+    $yellow; /* second color */
 
-  background-size: calc(var(--bg-pattern-size) / 4.667) var(--bg-pattern-size), var(--bg-pattern-size) calc(var(--bg-pattern-size) / 4.667);
+  background-size: calc(var(--bg-pattern-size) / 4.667) var(--bg-pattern-size),
+    var(--bg-pattern-size) calc(var(--bg-pattern-size) / 4.667);
 }
-
 
 /* planner styling */
 #planner {
@@ -77,7 +82,6 @@ header {
 }
 
 /* footer styling */
-
 
 /* media queries */
 @media (width <= 768px) {
