--- a/src/components/PointOfInterestCard/PointOfInterestCard.scss
+++ b/src/components/PointOfInterestCard/PointOfInterestCard.scss
@@ -7,7 +7,8 @@ $secondary-color: #604675;
   max-width: 20em;
   margin: auto auto 1.5em;
 
-  p, h3 {
+  p,
+  h3 {
     font-size: 1.2rem;
     text-align: center;
     line-height: 0.1rem;
