--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,6 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  color-scheme: light dark;
-  color: rgb(255 255 255 / 87%);
   background-color: #242424;
   font-synthesis: none;
   text-rendering: optimizelegibility;
@@ -37,6 +35,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  color: white;
 }
 
 button:hover {
@@ -48,7 +47,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #fff;
@@ -62,3 +61,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+ */
