--- a/src/components/InputForm/InputForm.scss
+++ b/src/components/InputForm/InputForm.scss
@@ -1,59 +1,49 @@
-/* form styling */
-form {
-  /* vertically centered */
-  display: flex;
-  flex-direction: column;
-  margin: auto;
+.form-container {
+  display: inline-block;
 }
 
-.form-grid {
+.form-option {
   display: grid;
   grid-template-columns: max-content 1fr;
   gap: 1em;
-  align-items: start;
+  margin-bottom: 1em;
 
-  label {
+  .label-text {
+    display: inline-block;
+    min-width: 8em;
     text-align: right;
-    min-width: 200px;
   }
-}
 
-.form-element {
-  max-width: 40em;
-}
-
-.amenities-container {
-  display: flex;
-  gap: 1em;
-  flex-wrap: wrap;
-}
-
-.form-container {
-  display: grid;
-  margin: auto;
-  gap: 1em;
-
-  button {
-    max-width: 10em;
-    margin: auto;
-  }
-}
-
-.error {
-  color: red;
-  grid-column: 2;
-}
-
-/* media queries */
-@media (width <=768px) {
-  /* display each element in its own row */
-  .form-grid {
-    display: flex;
-    flex-direction: column;
-    gap: 0;
+  .amenities-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
 
     label {
-      text-align: left;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
+
+    .error {
+      color: red;
+      grid-column: 2;
+    }
+  }
+
+  input,
+  select {
+    width: 100%;
+    max-width: 9em;
+    min-width: 2em;
+  }
+}
+
+@media (width <= 768px) {
+  .amenities-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
+    padding-right: 1em;
   }
 }
