--- a/src/components/PlacesFilter/PlacesFilter.css
+++ b/src/components/PlacesFilter/PlacesFilter.css
@@ -66,4 +66,9 @@ select[disabled] {
     display: inline;
     margin-left: 1em;
   }
+
+  .places-filter {
+    max-width: unset;
+    align-self: unset;
+  }
 }
